apps/photography-web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photography-web-ingress
spec:
  rules:
  - host: photography.lucascajal.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: photography-web-service
            port:
              number: 5000
  - host: lucascajal.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: photography-web-service
            port:
              number: 5000
